capsules/spectral-bridge/tests/ui/reciprocal_experiential_cannot_be_forged.stderr
error[E0624]: associated function `new` is private
 --> tests/ui/reciprocal_experiential_cannot_be_forged.rs:6:48
  |
6 |       let _forged = ReciprocalPresenceReceiptV1::new(
  |                                                  ^^^ private associated function
  |
 ::: src/reciprocal_experiential.rs
  |
  | /     fn new(
  | |         receipt_id: String,
  | |         presence_kind: ReciprocalPresenceKindV1,
  | |         actor: String,
... |
  | |         recorded_at_unix_ms: u64,
  | |     ) -> Self {
  | |_____________- private associated function defined here
